--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mfarahani/tcrawl",
+    "name": "wersas1/tcrawl",
     "description": "scrapping all data and information public channels telegram & create object from scrapping with template",
     "license": "AGPL-3.0-only",
     "authors": [
